<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.quikcart.ui.home.HomeFragment"
        android:label="@string/homePage"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_productFragment"
            app:destination="@id/productFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.quikcart.ui.favorite.FavoriteFragment"
        android:label="@string/wish_list"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.quikcart.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.quikcart.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_addressesFragment"
            app:destination="@id/addressesFragment" />
    </fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.quikcart.ui.payment.PaymentFragment"
        android:label="fragment_payment"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/addressesFragment"
        android:name="com.example.quikcart.ui.adresses.AddressesFragment"
        android:label="fragment_addresses"
        tools:layout="@layout/fragment_addresses" >
        <action
            android:id="@+id/action_addressesFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.quikcart.ui.map.MapFragment"
        android:label="fragment_map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.quikcart.ui.products.ProductFragment"
        android:label="fragment_product"
        tools:layout="@layout/fragment_product" >
        <argument
            android:name="brand_id"
            app:argType="long" />
    </fragment>
</navigation>