<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.placeorder.secondscreen.PlaceOrderFragment"
    android:padding="16dp"

    >


    <TextView
        android:id="@+id/sub_total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/subtotal"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/pacifico"
         />
    <TextView
        android:id="@+id/sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="20.0"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/discount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sub_total_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/discount_applied"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/pacifico"
        />

    <TextView
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/discount_tv"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="20.0"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        />


    <TextView
        android:id="@+id/fees_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/discount_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/shipping_fees"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/pacifico"
        />

    <TextView
        android:id="@+id/fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/fees_tv"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="20.0"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fees_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/total_price"


        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/pacifico"
        />
    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/total_tv"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="20.0"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        />
    <LinearLayout
        android:id="@+id/payment_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/total_tv"
        android:background="@drawable/rounded_transparent_bg"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_payment_method"
            android:fontFamily="@font/pacifico"
            android:textSize="15sp"
            />
        <com.paypal.checkout.paymentbutton.PaymentButtonContainer
            android:id="@+id/payment_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:paypal_button_color="silver"
            app:paypal_button_label="pay"
            app:paypal_button_shape="rectangle"
            app:paypal_button_size="large"
            app:paypal_button_enabled="true"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_bg"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@drawable/rounded_bg"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/cash"
                android:layout_gravity="center"
                android:padding="8dp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/cash_on_delivery"
                android:textSize="24sp"
                android:fontFamily="@font/barlow_bold"
                android:textColor="@color/xd_lemon_dark"
                />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/payment_linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/place_order"
        android:backgroundTint="@color/xd_burgundy"

        />


</androidx.constraintlayout.widget.ConstraintLayout>