<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:background="@drawable/dialogue_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:background="@drawable/dialogue_background"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_margin="16dp"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView11"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationTitleFieldLayOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationTitleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/give_title_to_location"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_address_title"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
        <RadioGroup
            android:id="@+id/choosePhoneGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton
                android:id="@+id/chooseDefaultPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_phone"
                android:textColor="@color/white"
                />
            <RadioButton
                android:id="@+id/chooseNewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_phone"
                android:textColor="@color/white"
                android:layout_marginHorizontal="16dp"

                />
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationPhoneFieldLayOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/locationTitleFieldLayOut"
            app:layout_constraintStart_toStartOf="@+id/locationTitleFieldLayOut"
            app:layout_constraintTop_toBottomOf="@+id/locationTitleFieldLayOut"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_phone"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dismissBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dismiss"
                android:backgroundTint="@color/xd_dark_burgundy"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/confirmBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/confirm"
                android:backgroundTint="@color/xd_dark_burgundy"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>