<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.products.ProductFragment">
        <HorizontalScrollView
            android:id="@+id/chip_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                >
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_accessories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessories"
                    android:backgroundTint="@color/xd_asset_pink"
                    />
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_shoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoes"
                    android:backgroundTint="@color/xd_asset_pink"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_shirt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shirt"
                    android:backgroundTint="@color/xd_asset_pink"
                    />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_products"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/product_item"
            app:spanCount="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>